--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,13 +1,12 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.novoda.bintray-release'
 
 android {
-    compileSdkVersion 26
-
-
+    compileSdkVersion 27
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
 
@@ -26,9 +25,18 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+}
+
+//添加
+publish {
+    userOrg = 'cyg24kshign'//bintray.com用户名
+    groupId = 'com.jack.frdialog'//jcenter上的路径
+    artifactId = 'FRDialog'//项目名称
+    publishVersion = '1.0.0'//版本号
+    desc = 'Oh hi, this is a FRDialog for a project'//描述，不重要
+    website = 'https://github.com/AndroidFriendsGroup/FRDialog'//网站，不重要；尽量模拟github上的地址，例如我这样的；当然你有地址最好了
 }
