--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    compileOnly 'com.android.support:recyclerview-v7:27.1.1'
 }
 
 //添加
@@ -36,7 +37,7 @@ publish {
     userOrg = 'cyg24kshign'//bintray.com用户名
     groupId = 'com.jack.frdialog'//jcenter上的路径
     artifactId = 'FRDialog'//项目名称
-    publishVersion = '1.0.2'//版本号
+    publishVersion = '1.0.3'//版本号
     desc = 'Oh hi, this is a FRDialog for a project'//描述，不重要
     website = 'https://github.com/AndroidFriendsGroup/FRDialog'//网站，不重要；尽量模拟github上的地址，例如我这样的；当然你有地址最好了
 }
