--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -2,15 +2,13 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.novoda.bintray-release'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 28
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
 
@@ -25,11 +23,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:27.1.1'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    compile 'com.android.support:recyclerview-v7:27.1.1'
+    compileOnly 'androidx.appcompat:appcompat:1.0.2'
+    compileOnly 'androidx.recyclerview:recyclerview:1.0.0'
 }
 
 //添加
@@ -37,7 +32,7 @@ publish {
     userOrg = 'cyg24kshign'//bintray.com用户名
     groupId = 'com.jack.frdialog'//jcenter上的路径
     artifactId = 'FRDialog'//项目名称
-    publishVersion = '1.0.5'//版本号
+    publishVersion = '1.0.6'//版本号
     desc = 'Oh hi, this is a FRDialog for a project'//描述，不重要
     website = 'https://github.com/AndroidFriendsGroup/FRDialog'//网站，不重要；尽量模拟github上的地址，例如我这样的；当然你有地址最好了
 }
