--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -23,7 +23,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    compileOnly 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     compileOnly 'androidx.recyclerview:recyclerview:1.0.0'
 }
 
